# vmm-consola

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  tst_manager.cpp  vmConsola_en.ts  vmm_manager.cpp  vmm_manager.h
.github/workflows/: ci.yml
